// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input with dark theme renders with no errors 1`] = `
<DocumentFragment>
  <input
    class="sc-bdnylx gfnHGu"
    name="input-dark"
    type="text "
  />
</DocumentFragment>
`;

exports[`Input with light theme renders with no errors 1`] = `
<DocumentFragment>
  <input
    class="sc-bdnylx cBWbsb"
    name="input-light"
    type="text "
  />
</DocumentFragment>
`;
